[package]
name = "torserde"
version = "0.0.2"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
description = "A set of tools to allow the serialisation and deserialisation of certain types in accordance with the Tor specification"
edition = "2018"

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
bincode = "1.3.3"
lazy_static = "1.4.0"
chrono = "0.4.19"